--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -940,7 +940,7 @@
         (focusout)="onChangeValue($event,'ordering-partner-' + id)" style="width: 32px; height: 32px" type="number"
         [(ngModel)]="item.ordering">
 
-        <div class="organization-me">{{ "doi_tac" | translate | uppercase }}&nbsp;<span style="color: red">*</span>-</div>
+        <div class="organization-me">{{ "doi_tac" | translate }}&nbsp;<span style="color: red">*</span></div>
 
         <div style="margin-right: 10px;">
           <label class="custom-select-wrapper">
