--- a/src/app/main/contract-template/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract-template/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="sign-info-content item-right">
     <img src='assets/img/only_info.svg' alt="mobifone.contract">
-    <div class="font-sign">Thông tin chữ ký</div>
+    <div class="font-sign">Thông tin chữ ký ảnh</div>
   </div>
 </div>
 
