--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -939,7 +939,7 @@
         [(ngModel)]="item.ordering"
         oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" />
 
-        <div class="organization-me">{{ "doi_tac" | translate | uppercase }}&nbsp;<span style="color: red">*</span>
+        <div class="organization-me">{{ "doi_tac" | translate }}&nbsp;<span style="color: red">*</span>
         </div>
 
         <div style="margin-right: 10px;">
