--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -58,7 +58,7 @@
             <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/only_info.svg' : 'assets/img/only_info.svg'"
                  alt="mobifone.contract">
             <br>
-            <span class="text-stamp">Thông tin chữ ký</span>
+            <span class="text-stamp">Thông tin chữ ký ảnh</span>
           </div>
         </div>
       </div>
@@ -71,7 +71,7 @@
     <img src='assets/img/stamp.svg' alt="mobifone.contract">
     <div class="font-sign">Con dấu/ Chữ ký</div>
   </div>
-  <div class="sign-info-content item-right">
+  <div class="sign-info-content item-right" style="margin-left: 5px;">
     <img src='assets/img/only_info.svg' alt="mobifone.contract">
     <div class="font-sign">Thông tin chữ ký số</div>
   </div>
