--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -42,14 +42,14 @@
               multiple />
   
             <div class="select-contract">
-              <div class="div_file_attach">
+              <div class="div_file_attach" #divFileAttach>
                 <div *ngIf="!datasForm.fileAttachForm || datasForm.fileAttachForm.length == 0" style="color: #AEC7E5; font-size: 12px; font-weight: 500; line-height: 21px;">{{'choose.contract.file.attach' |
                   translate }}</div>
                 <div *ngFor="let item of datasForm.fileAttachForm; let i = index" style="width: 80%;">
                   {{item.filename ? item.filename : item.name}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item, i)"
                     src="../../../../../../assets/img/icon_close.svg"></div>
               </div>
-              <img src="assets/img/attach-square.png" alt="mobifone.contract" (click)="addFileAttach()">
+              <img src="assets/img/attach-square.png" alt="mobifone.contract" (click)="addFileAttach()" #contractImg class="contract-img">
             </div>
           </div>
         </div>
