--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.scss
@@ -97,7 +97,7 @@ input[type="file"] {
         border: 1px solid #E6EDFA;
         padding: 12px 10px;
         //cursor: pointer;
-        max-height: 48px;
+        max-height: 113px;
         overflow-y: auto;
 
         &:hover {
@@ -118,9 +118,14 @@ input[type="file"] {
         position: absolute;
         top: 12px;
         right: 10px;
-      }
-      >img:hover{
-        cursor: pointer;
+
+        &.shifted {
+          right: 26px;
+        }
+
+        &:hover{
+          cursor: pointer;
+        }
       }
     }
   }
