--- a/src/app/main/contract/form-contract/confirm-contract-form/confirm-contract-form.component.html
+++ b/src/app/main/contract/form-contract/confirm-contract-form/confirm-contract-form.component.html
@@ -7,7 +7,7 @@
         <div class="row  mt-8px">
             <div class="col-md-12">
                 <div class="label_item">{{'contract.name' | translate}}</div>
-                <div class="content-input mt-6px">
+                <div class="content-input mt-6px hover-item">
                     <div [innerHTML]="this.datasForm.name"></div>
                 </div>
             </div>
@@ -16,14 +16,14 @@
         <div class="row mt-8px">
             <div class="col-md-9" style="padding-right: 8px;">
                 <div class="label_item">{{'note' | translate}}</div>
-                <div class="content-input mt-6px">
+                <div class="content-input mt-6px hover-item">
                     <div [innerHTML]="this.datasForm.notes"></div>
                 </div>
             </div>
 
             <div class="col-md-3" style="padding-left: 7px;">
                 <div class="label_item">{{'expiration-date' | translate}}</div>
-                <div class="content-input mt-6px">
+                <div class="content-input mt-6px hover-item">
                     <div [innerHTML]="this.datasForm.sign_time | date: 'dd/MM/yyyy'"></div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
 
     <div>
         <div *ngFor="let item of this.datasForm.is_determine_clone">
-            <div class="boder-info flex mt-8px">
+            <div class="boder-info flex mt-8px hover-item">
                 <div class="ordering"> 
                     <div class="content-index">
                         {{item.ordering}}
@@ -45,45 +45,69 @@
                     <div class="name-info">{{item.name}}</div>
 
                     <div class="mt-16px" *ngIf="item.type == 2">
-                        <div class="label">{{'user.lead' | translate}}</div>
+                        <div class="label">{{'user.lead' | translate}}
+                            <span *ngIf="getPartnerCoordinationer(item).length > 0">
+                                &nbsp;({{ getPartnerCoordinationer(item).length }})
+                            </span>
+                        </div>
                 
                         <div *ngFor="let reviewer of item.recipients">
                             <div *ngIf="reviewer.role == 1" class="flex mt-16px">
                                 <div class="content-index">{{reviewer.ordering}}</div>
-                                <div class="item-name">{{reviewer.name}} - {{reviewer.email}}</div>
+                                <div class="item-name">
+                                    {{ reviewer.name }} <span *ngIf="reviewer.email" class="color-email-or-phone">({{ reviewer.email }})</span>
+                                </div> 
                             </div>
                         </div>
                     </div> 
 
                     <div class="mt-16px" *ngIf="item.type == 1 || item.type == 2">
-                        <div class="label">{{'user.view' | translate}}</div>
+                        <div class="label">{{'user.view' | translate}}
+                            <span *ngIf="getPartnerReviewer(item).length > 0">
+                                &nbsp;({{ getPartnerReviewer(item).length }})
+                            </span>
+                        </div>
                 
                         <div *ngFor="let reviewer of item.recipients">
                             <div *ngIf="reviewer.role == 2" class="flex mt-16px">
                                 <div class="content-index">{{reviewer.ordering}}</div>
-                                <div class="item-name">{{reviewer.name}} - {{reviewer.email}}</div>
+                                <div class="item-name">
+                                    {{ reviewer.name }} <span *ngIf="reviewer.email" class="color-email-or-phone">({{ reviewer.email }})</span>
+                                </div> 
                             </div>
                         </div>
                     </div>   
                 
                     <div class="mt-16px">
-                        <div class="label">{{'user.sign' | translate}}</div>
+                        <div class="label">{{'user.sign' | translate}}
+                            <span *ngIf="getPartnerSignature(item).length > 0">
+                                &nbsp;({{ getPartnerSignature(item).length }})
+                            </span>
+                        </div>
                 
                         <div *ngFor="let reviewer of item.recipients">
                             <div *ngIf="reviewer.role == 3" class="flex mt-16px">
                                 <div class="content-index">{{reviewer.ordering}}</div>
-                                <div class="item-name">{{reviewer.name}} - {{reviewer.email}}</div>
+                                <div class="item-name">
+                                    {{ reviewer.name }} <span *ngIf="reviewer.email" class="color-email-or-phone">({{ reviewer.email }})</span>
+                                </div> 
                             </div>
                         </div>
                     </div>  
                 
                     <div class="mt-16px" *ngIf="item.type == 1 || item.type == 2">
-                        <div class="label">{{'user.doc' | translate}}</div>
+                        <div class="label">{{'user.doc' | translate}}
+                            <span *ngIf="getPartnerDocument(item).length > 0">
+                                &nbsp;({{ getPartnerDocument(item).length }})
+                            </span>
+                        </div>
                 
                         <div *ngFor="let reviewer of item.recipients">
                             <div *ngIf="reviewer.role == 4" class="flex mt-16px">
                                 <div class="content-index">{{reviewer.ordering}}</div>
-                                <div class="item-name">{{reviewer.name}} - {{reviewer.email}}</div>
+                                <div class="item-name">
+                                    {{ reviewer.name }} <span *ngIf="reviewer.email" class="color-email-or-phone">({{ reviewer.email }})</span>
+                                </div>
                             </div>
                         </div>
                     </div>  
