--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
@@ -161,3 +161,7 @@
 .hover-item:hover {
   border: 1px solid #286CF5 !important; /* Thay đổi màu viền khi hover */
 }
+
+.color-email-or-phone {
+  color: #A8B5CE !important;
+}
