--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.scss
@@ -307,7 +307,7 @@ button {
   
   .p-multiselect .p-multiselect-label.p-placeholder, .p-dropdown .p-dropdown-label.p-placeholder {
     color: #AEC7E5 !important;
-    font-size: 12px;
+    font-size: 12px !important;
     font-weight: 500;
     line-height: 21px;
   }
