--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -307,7 +307,7 @@ button {
   
   .p-multiselect .p-multiselect-label.p-placeholder, .p-dropdown .p-dropdown-label.p-placeholder {
     color: #AEC7E5 !important;
-    font-size: 12px;
+    font-size: 12px !important;
     font-weight: 500;
     line-height: 21px;
   }
@@ -352,8 +352,19 @@ button {
 ::ng-deep .p-multiselect-label,
 ::ng-deep .p-dropdown-label,
 ::ng-deep .p-dropdown-filter {
-  color: #00186D;
-  font-size: 14px;
+  color: #00186D !important;
+  font-size: 14px !important;
   font-weight: 500;
   line-height: 21px;
+}
+
+:host ::ng-deep {
+  .p-disabled, .p-component:disabled {
+    opacity: 1 !important;
+    pointer-events: all; /* Allow hover events on disabled elements */
+  }
+
+  .p-disabled:hover, .p-component:disabled:hover {
+    border: 1px solid #286CF5 !important;
+  }
 }
