--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -182,11 +182,11 @@
                                     <span *ngIf="item.status == 2 && item.sign_type[0]?.id == 7" style="color: #EE7200; padding: 5px;">{{'signed.usb.bcy' | translate}}</span>
                                     <span *ngIf="item.status == 2 && item.sign_type[0]?.id == 8" style="color: #EE7200; padding: 5px;">{{'signed.romote.signing' | translate}}</span>
                                   </div>
-                                  <div *ngIf="item.ceca_push == 1">
+                                  <!-- <div *ngIf="item.ceca_push == 1">
                                     <div class="item_contract_infor">{{'contract.status.ceca' | translate}}:
                                       <span class="status_blue_ceca">{{getNameStatusCeca(item.contractStatus, item.contractCecaPush, item.contractCecaStatus) | translate}}</span>
                                     </div>
-                                  </div>
+                                  </div> -->
                                 </div>
 
                                 <!--Cac ben ky-->
@@ -195,7 +195,7 @@
                                 </div> -->
 
                                 <!--Trang thai hop dong-->
-                                <div class="row" *ngIf="item.ceca_push == 1">
+                                <div class="row" *ngIf="item.participant.contract.ceca_push == 1 && filter_status == 4">
                                     <div class="item_contract_infor">{{'contract.status.ceca' | translate}}:
                                         <span class="status_blue_ceca">{{getNameStatusCeca(item.contractStatus, item.contractCecaPush, item.contractCecaStatus) | translate}}</span>
                                     </div>
@@ -253,7 +253,7 @@
                         <!-- <span class="status_blue">{{item.contractStatus | pipe | translate}}</span> -->
                         <span class="status_blue"
                               [ngClass]="{'draft-status' : item?.contractStatus == 0, 'processing-status' : item?.contractStatus == 20,'expire-status' : item?.contractStatus == 33,
-                              'overdue-status' : item?.contractStatus == 34,'fail-status' : item?.contractStatus == 31,'cancel-status' : item?.contractStatus == 32,
+                              'overdue-status' : item?.contractStatus == 2,'fail-status' : item?.contractStatus == 31,'cancel-status' : item?.contractStatus == 32,
                               'complete-status' : item?.contractStatus == 30,'liquidated-status' : item?.contractStatus == 40}">{{item.contractStatus | pipe | translate}}</span>
                       </div>
                     </div>
@@ -390,7 +390,7 @@
                       <!-- <span class="status_blue">{{item.status | pipe | translate}}</span> -->
                       <span class="status_blue"
                             [ngClass]="{'draft-status' : item?.status == 0, 'processing-status' : item?.status == 20,'expire-status' : item?.status == 33,
-                              'overdue-status' : item?.status == 34,'fail-status' : item?.status == 31,'cancel-status' : item?.status == 32,
+                              'overdue-status' : item?.status == 2,'fail-status' : item?.status == 31,'cancel-status' : item?.status == 32,
                               'complete-status' : item?.status == 30,'liquidated-status' : item?.status == 40}">{{item.status | pipe | translate}}</span>
                     </div>
                   </div>
@@ -663,11 +663,11 @@
                                     <span *ngIf="item.role == 2" style="color: #EE7200; padding: 5px;">{{'Đang xem xét' | translate}}</span>
                                   </div>
 
-                                  <div *ngIf="item.ceca_push == 1">
+                                  <!-- <div *ngIf="item.ceca_push == 1">
                                     <div class="item_contract_infor">{{'contract.status.ceca' | translate}}:
                                       <span class="status_blue_ceca">{{getNameStatusCeca(item.contractStatus, item.contractCecaPush, item.contractCecaStatus) | translate}}</span>
                                     </div>
-                                  </div>
+                                  </div> -->
 
 
                                 </div>
@@ -677,7 +677,7 @@
                                 </div> -->
 
                                 <!--Trang thai hop dong-->
-                                <div class="row" *ngIf="item.ceca_push == 1">
+                                <div class="row" *ngIf="item.participant.contract.ceca_push == 1 && filter_status == 4">
                                   <div class="item_contract_infor">{{'contract.status.ceca' | translate}}:
                                       <span class="status_blue_ceca"> {{getNameStatusCeca(item.contractStatus, item.contractCecaPush, item.contractCecaStatus) | translate}}</span>
                                   </div>
