--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -17,7 +17,7 @@
     </div>
     <ng-template [ngIf]="!roleMess">
       <div class="row cancel-padding" style="margin: 16px auto;">
-        <div class="col-lg-9-8 btn-padding-right">
+        <div [ngClass]="{'col-lg-8-7': this.isOrg == 'off' && this.idCheckBox.length > 0, 'col-lg-10-9': !(this.isOrg == 'off' && this.idCheckBox.length > 0)}" class="col-lg-8-7 btn-padding-right">
             <div class="input-line search">
                 <!-- <img src="../../assets/img/icon_search.svg" class="input-img" /> -->
                 <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'contract.search.name.placeholder' | translate}}" (keyup)="autoSearch($event)" />
@@ -25,14 +25,18 @@
             </div>
 
         </div>
-        <div class="col-lg-1-1 col-md-6 btn_search btn-padding-right btn-padding-left" >
+        <div [ngClass]="{'btn-padding-right': this.isOrg == 'off' && this.idCheckBox.length > 0, 'col-md-4': this.isOrg == 'off' && this.idCheckBox.length > 0}" class="col-lg-1-1 btn_search btn-padding-left">
           <button class="btn-block btn_advanced" (click)="searchContract()" >
             {{'btn.advance' | translate}}
             <img src="../../assets/img/vector_advance.svg" class="input-img" />
           </button>
         </div>
-        <div class="col-lg-1-1 col-md-6 btn_search btn-padding-left" *ngIf="this.isOrg == 'off'">
+        <div class="col-lg-1-1 col-md-4 btn_search btn-padding-right btn-padding-left" *ngIf="this.isOrg == 'off' && this.idCheckBox.length > 0">
           <button (click)="cancelMany()" class="btn-block btn_cancel">{{"cancel.multi"| translate}}</button>
+        </div>
+
+        <div class="col-lg-1-1 col-md-4 btn_search btn-padding-left" *ngIf="this.isOrg == 'off' && this.idCheckBox.length > 0">
+          <button (click)="openEditExpiration('')" class="btn-block btn_cancel">{{"Gia hạn nhiều"| translate}}</button>
         </div>
       </div>
 
@@ -74,7 +78,7 @@
               <div class="col-sm-5">
                   <div class="flex-container">
                       <div>
-                        <input class="input-checkbox col-md-1" name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked"/>
+                        <input class="input-checkbox col-md-1" name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked" (change)="onCheckboxChange(item)"/>
                       </div>
 
                       <div class="col-md-11" style="display: flex;margin-left: 12px;cursor: pointer;" (click)="isQLHD_07?openDetail(item.id):null">
@@ -286,7 +290,7 @@
     </div>
     <ng-template [ngIf]="!roleMess">
       <div class="row cancel-padding" style="margin: 16px auto;">
-        <div [ngClass]="{'col-lg-10-9': !(status === 'draft' && isOrg === 'off'), 'col-lg-8-7': status === 'draft' && isOrg === 'off', 'btn-padding-right': true}">
+        <div [ngClass]="{'col-lg-9-8': (this.filter_status == 34 && this.isOrg == 'off' && this.idCheckBox.length > 0), 'col-lg-10-9': !(status === 'draft' && isOrg === 'off'), 'col-lg-8-7': status === 'draft' && isOrg === 'off', 'btn-padding-right': true}">
             <div class="input-line search">
                 <!-- <img src="../../assets/img/icon_search.svg" class="input-img" /> -->
                 <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'contract.search.name.placeholder' | translate}}" (keyup)="autoSearch($event)" />
@@ -294,7 +298,7 @@
             </div>
         </div>
 
-        <div [ngClass]="{'btn-padding-right': status === 'draft' && isOrg === 'off', 'col-lg-1-1': true, 'col-md-4': status === 'draft' && isOrg === 'off', 'btn_search': true, 'btn-padding-left': true}">
+        <div [ngClass]="{'btn-padding-right': ((status === 'draft' && isOrg === 'off') || (this.filter_status == 34 && this.isOrg == 'off' && this.idCheckBox.length > 0)), 'col-lg-1-1': true, 'col-md-4': status === 'draft' && isOrg === 'off', 'btn_search': true, 'btn-padding-left': true}">
           <button class="btn-block btn_advanced" (click)="searchContract()" >
             {{'btn.advance' | translate}}
             <img src="../../assets/img/vector_advance.svg" class="input-img" />
@@ -311,6 +315,10 @@
           <button class="btn-block btn_cancel" (click)="multiDeleteDraft('multiDelete')">
             {{'btn.multi.delete'|translate}}
           </button>
+        </div>
+
+        <div class="col-lg-1-1 btn_search btn-padding-left" *ngIf="this.filter_status == 34 && this.isOrg == 'off' && this.idCheckBox.length > 0">
+          <button (click)="openEditExpiration('')" class="btn-block btn_cancel">{{"Gia hạn nhiều"| translate}}</button>
         </div>
       </div>
 
@@ -359,7 +367,11 @@
                 </div> -->
                 <!--Cột 2-->
                 <div class="col-sm-5">
-                    <div class="row">
+                    <div class="flex-container">
+                      <div *ngIf = "this.filter_status == 34 &&  this.isOrg == 'off'">
+                        <input class="input-checkbox col-md-1" name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked" (change)="onCheckboxChange(item)"/>
+                      </div>
+
                       <div class="col-md-11" style="display: flex;margin-left: 6px; cursor: pointer;" (click)="isQLHD_07?openDetail(item.id):null">
                           <img src="../../assets/img/frame_contract.svg" style="width: 72px;">
                           <div style="margin-left: 12px;">
