sửa gán ng ký, giới hạn ô ký hợp tạo hợp đồng đơn lẻ

--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -128,8 +128,9 @@
                     <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag"
                         [style.width]="this.canvasWidth">
                         <div class="resize-drag not-out-drop" [id]="d.id" style="z-index: -1" #itemElement
-                            (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="(d.sign_unit != 'chu_ky_anh') ? changePosition(d) : changePositionSignature(d)">
-                            <div *ngIf="d.name" class="name-sig-img-daky long-text-ellipsis">{{d.name ? d.name : ''}}</div>
+                            (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="(d.sign_unit != 'chu_ky_anh' && d.sign_unit != 'chu_ky_so_con_dau_va_thong_tin') ? changePosition(d) : changePositionSignature(d)">
+                            <div *ngIf="d.name" [ngClass]="{'long-text-ellipsis': d.sign_unit != 'chu_ky_so_con_dau', 'long-text-ellipsis-con-dau': d.sign_unit == 'chu_ky_so_con_dau' }"
+                            class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
                             <div class="sig-img-daky" (click)="onCancel($event, d)">
                                 <!-- <img src="assets/img/clear.svg" alt=""> -->
                                 <img src="assets/img/border-clear.svg" alt="">
