--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -1,68 +1,12 @@
-<div *ngIf="sign.sign_unit == 'chu_ky_so'" class="content">
-  <div class="skeleton-sign">
-  <div  [ngClass]="{
-                      'stamp-type' : sign.type_image_signature == 2,
-                       'd-unset' : sign.type_image_signature == 3}"  class="stamp-content">
-    <div
-         *ngIf="sign.type_image_signature == 1 || sign.type_image_signature == 2">
-      <div *ngIf="sign.type_image_signature == 1">
-        <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/only_info.svg' : 'assets/img/only_info.svg'"
-             alt="mobifone.contract">
-        <br>
-        <span class="text-stamp">Thông tin chữ ký số</span>
-      </div>
-      <div *ngIf="sign.type_image_signature == 2">
-        <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/stamp.svg' : 'assets/img/stamp.svg'"
-             alt="mobifone.contract">
-        <br>
-        <span class="text-stamp">Con dấu/ chữ ký</span>
-      </div>
-    </div>
-    <div *ngIf="sign.type_image_signature == 3|| sign.type_image_signature == null" class="stamp-content1">
-      <div style="display: flex;height: inherit;">
-        <div class="left-stamp">
-          <div>
-            <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/stamp.svg' : 'assets/img/stamp.svg'"
-                 alt="mobifone.contract">
-            <br>
-            <span class="text-stamp">Con dấu/ chữ ký</span>
-          </div>
-        </div>
-        <div class="right-stamp">
-          <div>
-            <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/only_info.svg' : 'assets/img/only_info.svg'"
-                 alt="mobifone.contract">
-            <br>
-            <span class="text-stamp">Thông tin chữ ký số</span>
-          </div>
-        </div>
-      </div>
-    </div>
+
+<div *ngIf="sign.sign_unit == 'chu_ky_anh'" class="content">
+  <div class="stamp-content item-left">
+    <img src='assets/img/stamp.svg' alt="mobifone.contract">
+    <div class="font-sign">Chữ ký ảnh</div>
   </div>
-  </div>
-</div>
-<div style="display: unset" *ngIf="sign.sign_unit == 'chu_ky_anh'" class="content">
-  <div style="display: unset" class="stamp-content">
-    <div  class="stamp-content1">
-      <div style="display: flex;height: inherit;">
-        <div class="left-stamp">
-          <div>
-            <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/stamp.svg' : 'assets/img/stamp.svg'"
-                 alt="mobifone.contract">
-            <br>
-            <span class="text-stamp">Chữ ký ảnh</span>
-          </div>
-        </div>
-        <div class="right-stamp">
-          <div>
-            <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/only_info.svg' : 'assets/img/only_info.svg'"
-                 alt="mobifone.contract">
-            <br>
-            <span class="text-stamp">Thông tin chữ ký ảnh</span>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="sign-info-content item-right" style="margin-left: 5px;">
+    <img src='assets/img/only_info.svg' alt="mobifone.contract">
+    <div class="font-sign">Thông tin chữ ký ảnh</div>
   </div>
 </div>
 
