--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
@@ -85,3 +85,68 @@
   color: #286CF5;
   font-size: 6px
 }
+
+.content {
+  //height: 102px;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // flex-direction: column;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  // padding: 4px;
+}
+
+.stamp-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 33.33%;
+  background-color: #E6EDFA;
+  border-radius: 6px;
+  height: 100%;
+}
+.stamp-content1 {
+  align-items: center;
+  justify-content: center;
+  flex-basis: 33.33%;
+  background-color: #f4f6f9;
+  border-radius: 6px;
+  height: 100%;
+}
+.content .skeleton-sign {
+  width: 100%;
+  height: 100%;
+}
+.d-unset {
+  display: unset !important;
+}
+
+.item-left, .item-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.item-left {
+  background-color: #C7E8FA !important;
+}
+
+.item-right {
+  background-color: #E6EDFA !important;
+}
+
+.item img {
+  max-width: 100%; /* Đặt kích thước ảnh phù hợp */
+}
+
+.font-sign {
+  font-size: 6px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #286CF5;
+}
